# Real-time-Raytracing-Renderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  imgui.ini  src - 副本.lnk
CMake/: FindOptiX.cmake  configure_optix.cmake
include/GLFW/: glfw3.lib
include/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_widgets.cpp
include/glad/: glad.c  glad.h
include/glm/glm/ext/: matrix_clip_space.hpp
include/optix/: optix.h  optix_denoiser_tiling.h  optix_device.h  optix_function_table.h  optix_function_table_definition.h  optix_host.h  optix_micromap.h  optix_stack_size.h  optix_stubs.h  optix_types.h
include/optix/internal/: optix_device_impl.h  optix_device_impl_exception.h  optix_device_impl_transformations.h  optix_micromap_impl.h
lib/: tinyobjloader.lib
model/Cerberus_LP/: Cerberus_LP.mtl
model/CornellBox/: CornellBox-Original.mtl
model/helmet/: helmet.mtl
model/mitsuba/: mitsuba.mtl
model/sponza/: new_new_sponza.mtl  new_sponza.mtl
shader/: fragment.glsl  shaders.c  vertex.glsl
src/: CUDABuffer.h  GLWindow.cpp  GLWindow.h  LaunchParams.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererWindow.h  Shader.h  devicePrograms.cu  helper.h  main.cpp  math_calc.h  optix_add.h  tracerConfig.h
